# vector-drawable-viewer

./: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/usecases/: mod.rs
src-tauri/src/usecases/fs/: exists.rs  get_all_files_in_directory.rs  mod.rs  read_file.rs  read_to_base64.rs  write_file.rs  write_from_base64.rs
src-tauri/src/usecases/utils/: base64.rs
src-tauri/src/utils/: base64.rs  mod.rs  read_file.rs  write_file.rs
src/app/: app.tsx  index.tsx
src/entities/image/model/: image.converter.ts  image.parser.ts  types.ts
src/entities/image/model/convertors/: convertors.ts  vector-drawable.ts
src/entities/image/model/convertors/vector-drawable/: index.ts  svg-convert.ts  vector-drawable-svg.d.ts  vector-drawable.ts
src/entities/image/ui/: image-card-list.tsx  image-card.tsx  image.tsx
src/entities/parser/: index.ts  types.ts
src/pages/: home.tsx
src/shared/lib/: utils.ts
src/shared/lib/fs/: exists.ts  get-all-files-in-directory.ts  read-file.ts  read-to-base64.ts  write-file.ts  write-from-base64.ts
src/shared/lib/utils/: base64.ts
src/shared/ui/: ui-button.tsx  ui-card.tsx  ui-page-spinner.tsx  ui-select.tsx  ui-spinner.tsx  ui-text-field.tsx
src/shared/ui/layouts/: split-view.tsx  tab-view.tsx
